# cs174a_term_project

./: .gitignore  README  agents.md  emscripten-cache.nix  flake.nix
.devcontainer/: CMakeUserPresets.json  devcontainer.json
.devcontainer/base/: Dockerfile  nix-daemon.initd
.github/workflows/: build-devcontainer.yml  emscripten-webpage.yml  windows-build.yml
cs174projectCleanup/: Angel.h  CMakeLists.txt  CheckError.h  CollisionBox.h  CurvyBulletEntity.h  DrawableEntity.h  Engine.cpp  Engine.h  Exception.h  Explosion.h  Framebuffer.cpp  Framebuffer.h  GameEntity.cpp  GameEntity.h  Gamepad.cpp  Gamepad.h  General.h  GlobalIncludes.h  GrenadeEntity.h  InitShader.cpp  MobileEntity.h  Player.cpp  Player.h  Quaternion.h  RenderObject.cpp  RenderObject.h  Scene.h  Shield.h  SoundPlayer.cpp  SoundPlayer.h  StraightBulletEntity.h  TVScreen.cpp  Text2D.cpp  Text2D.h  Texture.cpp  TextureManager.cpp  TurretEntity.h  Wall.h  WanderingEnemy.cpp  WorldEntity.cpp  (+7 more)
cs174projectCleanup/obj_loader/: objLoader.h  objTester.cpp  obj_parser.cpp
cs174projectCleanup/resources/: 404.html  PhongShader_fragment.glsl  PhongShader_vertex.glsl
